set up Blog home and blog page

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -35,6 +35,10 @@ nav{
   height: 100%;
 }
 
+.square-border {
+  border-radius: 0!important;
+}
+
 .card-link {
   color: $theme-primary!important;
   &:hover{
