--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,5 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
 
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome";
+
 $theme-primary: #12182E;
 $theme-secondary: #46344E;
 $theme-main: #e9ecef;
@@ -29,6 +32,12 @@ nav{
   }
   height: 30em;
 
+}
+
+.fa{
+  font-size: 1.5em!important;
+  margin-right: 0.5em;
+  margin-left: 0.5em;
 }
 
 .full-height {
