--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -40,8 +40,8 @@ nav{
   margin-left: 0.5em;
 }
 
-.full-height {
-  height: 100%;
+.full-width {
+  width: 100%!important;
 }
 
 .square-border {
@@ -54,4 +54,9 @@ nav{
     color: $theme-secondary!important;
     background-color: $theme-main!important;
   }
+}
+
+.card-img-overlay{
+  background-color: white!important;
+  opacity: 0.25!important;
 }
