--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -44,6 +44,10 @@ nav{
   width: 100%!important;
 }
 
+.full-height {
+  height: 100%!important;
+}
+
 .square-border {
   border-radius: 0!important;
 }
