--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,71 +1,73 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~prismjs/themes/prism-solarizedlight.css";
-
+@import url('https://fonts.googleapis.com/css?family=Skranji');
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
-
 $theme-primary: #12182E;
 $theme-secondary: #46344E;
 $theme-main: #e9ecef;
-
-nav{
-  font-family: 'Source Sans Pro';
-  background-color: $theme-primary;
+nav {
+    font-family: 'Source Sans Pro';
+    background-color: $theme-primary;
 }
 
-.font-rale{
-  font-family: 'Raleway';
+.font-rale {
+    font-family: 'Raleway';
 }
 
-.font-jose{
-  font-family: 'Josefin Sans';
+.font-jose {
+    font-family: 'Josefin Sans';
 }
 
-.header-image-container{
-  width: 100%;
-  background-image: url("https://images.pexels.com/photos/355288/pexels-photo-355288.jpeg?dl&fit=crop&w=5106&h=3404");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  object-fit: cover;
-  @media screen and (max-width: 900px) {
-    height: 10em;
-  }
-  height: 15em;
-
+.header-image-container {
+    width: 100%;
+    background-image: url("https://images.pexels.com/photos/355288/pexels-photo-355288.jpeg?dl&fit=crop&w=5106&h=3404");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    object-fit: cover;
+    @media screen and (max-width: 900px) {
+        height: 10em;
+    }
+    height: 15em;
 }
 
-.fa{
-  font-size: 1.5em!important;
-  margin-right: 0.5em;
-  margin-left: 0.5em;
+.fa {
+    font-size: 1.5em!important;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
 }
 
 .full-width {
-  width: 100%!important;
+    width: 100%!important;
 }
 
 .full-height {
-  height: 100%!important;
+    height: 100%!important;
 }
 
 .square-border {
-  border-radius: 0!important;
+    border-radius: 0!important;
 }
 
 .card-link {
-  color: $theme-primary!important;
-  &:hover{
-    color: $theme-secondary!important;
-    background-color: $theme-main!important;
-  }
+    color: $theme-primary!important;
+    &:hover {
+        color: $theme-secondary!important;
+        background-color: $theme-main!important;
+    }
 }
 
-.card-img-overlay{
-  background-color: white!important;
-  opacity: 0.25!important;
+.card-img-overlay {
+    background-color: white!important;
+    opacity: 0.25!important;
 }
 
-.home-about{
-  font-family: Raleway;
+.home-about {
+    font-family: Raleway;
+}
+
+.blog-heading {
+    font-family: 'Skranji', cursive;
+    font-size: 5em;
 }
